# rti_synth_pop

./: .gitignore  CITATION.cff  README.md  environment.yml  make_households_file.py  make_people_file.py  pyproject.toml  setup.py
rti_synth_pop/: sample_pums.py  task_1_download_census_data.py  task_1b_download_pums_and_geo_data.py  task_4_run_ipf.py  task_5_puma_bg_crosswalk.py  task_8_assign_coordinates.py
scripts/: assign_enrollment.py  assign_schools.py  convert_parquet_to_csv.py  generate_enrollment_probabilities.py  make_households_file.py  make_schools_file.py
src/rti_synth_pop/: config.py  task_1_download_census_data.py  task_2_create_marginal_tables.py  task_3_recode_pums_data.py  task_6_sample_pums_serialnos.py  task_7_generate_population.py  task_8_assign_coordinates.py
